--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
   <meta name="og:site_name" content="모앤더비 - moanda`ve" />
   <meta name="og:locale" content="ko_KR" />
   <meta name="og:image" content="https://moanda-ve.vercel.app/Logo/Logo.jpg" />
+  <meta name="og:image:width" content="790" />
+  <meta name="og:image:height" content="300" />
   <meta name="og:type" content="website" />
+  <meta name="robots" content="index, follow, nocache">
+  <meta name="googlebot"
+    content="index, nofollow, noimageindex, max-video-preview:-1, max-image-preview:large, max-snippet:-1">
   <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&autoload=false"></script>
-  <title>moanda've</title>
+  <title>moanda`ve</title>
 </head>
 
 <body>
