--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     content="index, nofollow, noimageindex, max-video-preview:-1, max-image-preview:large, max-snippet:-1">
   <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&autoload=false"></script>
-  <title>moanda've</title>
+  <title>모앤더비 - moanda've</title>
 </head>
 
 <body>
