--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta name="google-site-verification" content="veIOVMtass_Ch8R6y17DTz-E1DvYsjyifpHG4oZPato" />
   <meta name="description" content="모녀가 만드는 비건디저트" />
   <meta name="keywords" content="모앤더비, moandave, moanda-ve, moanda've, 비건, 비건카페, 비건디저트, 답례품" />
-  <meta name="og:title" content="모앤더비 - moanda've" />
-  <meta name="og:description" content="모녀가 만드는 비건디저트" />
-  <meta name="og:url" content="https://moanda-ve.vercel.app/" />
-  <meta name="og:site_name" content="모앤더비 - moanda've" />
-  <meta name="og:locale" content="ko_KR" />
-  <meta name="og:image" content="https://moanda-ve.vercel.app/Logo/Logo.jpg" />
-  <meta name="og:image:width" content="790" />
-  <meta name="og:image:height" content="300" />
-  <meta name="og:type" content="website" />
+  <meta property="og:title" content="모앤더비 - moanda've" />
+  <meta property="og:description" content="모녀가 만드는 비건디저트" />
+  <meta property="og:url" content="https://moanda-ve.vercel.app/" />
+  <meta property="og:site_name" content="모앤더비 - moanda've" />
+  <meta property="og:locale" content="ko_KR" />
+  <meta property="og:image" content="https://moanda-ve.vercel.app/Logo/Logo.jpg" />
+  <meta property="og:image:width" content="790" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:type" content="website" />
   <meta name="robots" content="index, follow, nocache">
   <meta name="googlebot"
     content="index, nofollow, noimageindex, max-video-preview:-1, max-image-preview:large, max-snippet:-1">
