--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta property="og:url" content="https://moanda-ve.vercel.app/" />
   <meta property="og:site_name" content="모앤더비 - moanda've" />
   <meta property="og:locale" content="ko_KR" />
-  <meta property="og:image" content="https://moanda-ve.vercel.app/Logo/Logo.jpg" />
-  <meta property="og:image:width" content="790" />
-  <meta property="og:image:height" content="300" />
+  <meta property="og:image" content="https://moanda-ve.vercel.app/Logo/Logo_og.png" />
+  <meta property="og:image:width" content="800" />
+  <meta property="og:image:height" content="400" />
   <meta property="og:type" content="website" />
   <meta name="robots" content="index, follow, nocache">
   <meta name="googlebot"
